# sp1-benchmark

./: Cargo.toml  README.md
ed25519/: Cargo.toml
ed25519/src/: main.rs
primitives/: Cargo.toml
primitives/src/: lib.rs
program/: Cargo.toml
program/src/: main.rs
script/: Cargo.toml  build.rs
