[workspace]
members = [
    "primitives",
    "program",
    "script",
]
resolver = "2"

[workspace.dependencies]
alloy-sol-types = "1.0"
program-primitives = { path = "primitives" }

[patch.crates-io]
k256 = { git = "https://github.com/sp1-patches/elliptic-curves", tag = "patch-k256-13.4-sp1-5.0.0" }
